Добавление якорей на строки кода

--- a/diffserver/templates/commit_sequence.html
+++ b/diffserver/templates/commit_sequence.html
@@ -66,6 +66,15 @@
         color: #008800;
     }
 
+    a.line-anchor {
+        text-decoration: none;
+        color: inherit;
+    }
+    a.line-anchor:hover {
+        text-decoration: underline;
+        color: blue;
+    }
+
     a.fixed_link {
         color: white;
         text-decoration: none;
