Добавляем экспорт в Redmine

--- a/diffserver/templates/commit_sequence.html
+++ b/diffserver/templates/commit_sequence.html
@@ -51,7 +51,7 @@
 {% endif %}
 
 <div>
-    <button id="export_comments_btn">vvv Export comments for Trac vvv</button>
+    <button id="export_comments_btn">vvv Export comments for Redmine vvv</button>
 </div>
 <div>
     <textarea id="exported_comments"></textarea>
