Поддержка форматирования для jira

--- a/diffserver/templates/commit_sequence.html
+++ b/diffserver/templates/commit_sequence.html
@@ -52,7 +52,8 @@
 {% endif %}
 
 <div>
-    <button id="export_comments_btn">vvv Export comments for Redmine vvv</button>
+    <button class="export_comments_btn" data-dialect="redmine">vvv Export comments for Redmine vvv</button>
+    <button class="export_comments_btn" data-dialect="jira">vvv Export comments for Jira vvv</button>
 </div>
 <div>
     <textarea id="exported_comments"></textarea>
